Fix Front-Page Formatting on IE11

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -285,7 +285,6 @@ main {
 
   &__item {
     align-self: center;
-    flex: 1 1 0;
     margin-bottom: 20px;
 
     &:last-child {
