--- a/src/scss/Info.scss
+++ b/src/scss/Info.scss
@@ -2,8 +2,8 @@
   position: relative;
   background-size: 50% auto;
   background: linear-gradient(to bottom, rgba(0,0,0, 0) 50%, white 50%);
-  padding-bottom: 10px;
-  padding-top: 50px;
+  padding-bottom: 20px;
+  padding-top: 40px;
 }
 
 .info-card {
