--- a/src/scss/News.scss
+++ b/src/scss/News.scss
@@ -91,6 +91,7 @@
       padding: 70px 70px 65px 75px;
 
       h1 {
+        text-align: center;
         margin-bottom: 30px;
       }
 
